# AlphaMatrixPixels

./: .clangd  .gitignore  AlphaMatrixPixels(2).~ino  AlphaMatrixPixels.ino  README.md  TESTING.md  TZ_pixel_vector.md  amp_constexpr.hpp  bit_matrix.hpp  build_tests.sh  color_rgba.hpp  cs_math.hpp  cs_pixel_matrix.hpp  cs_pixel_matrix_doc.md  fixed_point.hpp  font3x5.h  font4x7.h  gamma8_lut.hpp  gpt_info.md  gpt_info_new_effect.md  led_config.hpp  library.properties  math.hpp  matrix_boolean.hpp  matrix_effects.hpp  matrix_pixels.hpp  matrix_pixels_doc.md  matrix_render.hpp  matrix_render_efffects.hpp  meson.build  output_driver.hpp  rect.hpp  run_tests.sh  tatus --short  wifi_ota.hpp
.cursor/skills/session-handoff/: SKILL.md
GUI_Test/: BUILD.md  CMake  HXLED_GUI_Test.cbp  HXLED_GUI_Test.depend  HXLED_GUI_Test.layout  build.sh  config.hpp  fastled_code.cpp  fastled_code.hpp  main.cpp  meson.build
dev/: compiler_diagnostics.hpp
dev/GUI_Test/: .clangd  .index_hash.yaml  BUILD.md  HXLED_GUI_Test.cbp  build.sh  copy_line_index_helper.hpp  effect_presets.hpp  effect_set_helper.hpp  main.cpp  meson.build  remap_config.hpp
dev/codeblocks_prj/codeblocks_prj/: codeblocks_prj.cbp
doc/: agent_init_ucrt64.md  windows cpp gpp msys2 cursor-ide.md
docs/: Remapping.ods  small_timer.md
docs/other/: fixed_points_links.md
docs/rus/: ESP8266_Matter_Gateway_Architecture.md  ESP8266_flash_memory_comparison.md  TESTING.md  agent_init_ucrt64.md  meson_config.md  windows cpp gpp msys2 cursor-ide.md
docs/wnd_cfg/: vscode_MinGW_cfg.md  vscode_cygwin_detailed_setup.md  vscode_cygwin_setup.md  vscode_wingw_official.md  vscode_wingw_official_intellisense.md
examples/AlphaMatrixPixelsBase/: AlphaMatrixPixelsBase.ino  effect_presets.hpp  effect_presets_local.hpp  led_config.hpp
examples/SimpleClock/: .gitignore  SimpleClock.ino  effect_presets.hpp  effect_presets_local.hpp  effect_presets_local_macros.hpp  led_config.hpp  mywifipass_example.hpp  remap_config.hpp  wifi_ota.hpp
examples/SimpleClock_DBG/: SimpleClock_DBG.ino  effect_presets.hpp
src/: AlphaMatrixPixels.h  WIP_move_me.hpp  amp_class_base.hpp  amp_macros.hpp  amp_progmem.hpp  color_rgba.hpp  color_rgba_colors.hpp  driver_sdl2.hpp  driver_serial.hpp  effect_manager.hpp  effect_presets.hpp  fastled_output.hpp  fixed_point.hpp  font3x5.h  font_base.hpp  fonts.h  gamma8_lut.hpp  math.hpp  matrix_base.hpp  matrix_boolean.hpp  matrix_bytes.hpp  matrix_pixels.hpp  matrix_render.hpp  matrix_render_efffects.hpp  matrix_render_legacy_effects.hpp  matrix_render_pipes  matrix_render_pipes.hpp  matrix_sfx_system.hpp  matrix_types.hpp  matrix_utils.hpp  output_driver.hpp  rand_gen.hpp  render_base.hpp  render_efffects.hpp  render_geometric.hpp  render_legacy_effects.hpp  render_pipes.hpp
tests/: build_and_run_tests.sh  meson.build  pixel_matrix_tests.cpp
tools/: gen_gamma_lut.py
