project('AlphaMatrixPixels', 'cpp',
  version : '1.0.0',
  default_options : [
    'cpp_std=c++17',
    'warning_level=2',
    'default_library=static'
  ]
)

# Header-only library - no build needed, just include directories
# This is the library root - no executables here
# Test/debug applications are in dev/ subdirectories with their own meson.build files

